Video Sequence "Slip" tool ignores handle offset constraints #74602

Closed
opened 2020-03-10 04:11:40 +01:00 by Campbell Barton · 6 comments

When transforming video sequencer handles, there are limits beyond which you cannot move them which is enforced by the transform code.

The Slip operator ignores these constraints - allowing the strip content to be dragged with offsets that are outside the strip start/end.

To redo:

  • Start a new Video Sequencer Template

  • Add a new scene

  • Add that scene as a sequence strip.

  • Press 'S' to slip the selected strip.

  • Move the strip to the right of the strip (500 frames eg) so the strip has no content in it.

  • As an example of how this isn't properly supported:

    • Change the "Strip offset start" - The Scene flips and becomes negative, showing handles in the opposite directions.
When transforming video sequencer handles, there are limits beyond which you cannot move them which is enforced by the transform code. The Slip operator ignores these constraints - allowing the strip content to be dragged with offsets that are outside the strip start/end. To redo: - Start a new Video Sequencer Template - Add a new scene - Add that scene as a sequence strip. - Press 'S' to slip the selected strip. - Move the strip to the right of the strip (500 frames eg) so the strip has no content in it. - As an example of how this isn't properly supported: - Change the "Strip offset start" - *The Scene flips and becomes negative, showing handles in the opposite directions.*
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

#65723 was marked as duplicate of this issue

#65723 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @tintwotin, @WilliamReynish, @iss

Added subscribers: @tintwotin, @WilliamReynish, @iss

This issue was referenced by 0ca5b7b69b

This issue was referenced by 0ca5b7b69b0349e8d074a4942e75ed5386ff3ada

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-04-06 02:26:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74602
No description provided.