Fix T74602: Sequencer slip operator ignores offset constraints

Limit offsets, so each strip contains at least 1 frame of content.

Reviewed By: campbellbarton

Differential Revision: https://developer.blender.org/D7288